tests/suppress/suppress.exp
Error: A.js:16
 16: var test4: string = 123; // This error is NOT suppressed
                         ^^^ number. This type is incompatible with
 16: var test4: string = 123; // This error is NOT suppressed
                ^^^^^^ string

Warning: A.js:14
 14: // $FlowFixMe Error unused suppression
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Error suppressing comment. Unused suppression


Found 1 error and 1 warning
